--- a/index.html
+++ b/index.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Instagram clone</title>
+    <link rel="stylesheet" href="css/Style.css">
+    <script src="js/main.js"></script>
 </head>
 <body>
-    
+    <div class="instagram-wrapper">
+        <div class="instagram-phone">
+            <img src="img/cel.png" alt="Insta-phone">
+        </div>
+        <div class="instagram-continue">
+            <div class="group">
+                <img src="img/instagram-logo2.png" class="insta-logo" alt="insta logo">
+                <div class="profile-photo">
+                    <img class="photo-profile"src="img/leo.jpeg" alt="foto de perfil">
+                </div>
+
+                <a href="#" class="instagram-login">Continue como leonardo moreira</a>
+                <a href="#" class="instagram-logout">Remover conta</a>
+            </div> 
+            <div class="group">
+
+                <p class="not-account">Não é leonardo moreira?</p>
+                <p class="not-account">
+                    <span class="blue-link">Alternar contas</span>
+                    ou
+                    <span class="blue-link">Inscreva-se</span>
+                </p>
+            </div>
+            <div class="get-the-app">
+                <p class="get-app">Baixe o aplicativo</p>
+                <div class="download">
+                    <a href="#" class="app-download"></a>
+                    <a href="#" class="app-download"></a>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
